Wed Nov 03 22:55:04 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: Need to put flags to select ANSI C++ mode in CXXFLAGS
	  not AM_CXXFLAGS.

Wed Nov 03 22:27:08 GMT 2004  Olly Betts <olly@survex.com>

	* api/omenquire.cc: Fixed typo.

Wed Nov 03 21:58:53 GMT 2004  Olly Betts <olly@survex.com>

	* api/omenquire.cc: Added explicit cast to try to help Compaq C++
	  build.

Wed Nov 03 21:38:29 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: Probe for C++ compiler switches for ANSI mode as early
	  as possible.  With Compaq's C++, we need -D__USE_STD_IOSTREAM to
	  successfully #include <streambuf>.

Wed Nov 03 21:07:43 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: Fixed snprintf configure test.

Wed Nov 03 19:37:32 GMT 2004  Olly Betts <olly@survex.com>

	* common/utils.cc: Fixed typo.

Wed Nov 03 19:27:22 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac,common/utils.cc: Improved snprintf checking.

Wed Nov 03 15:43:54 GMT 2004  Olly Betts <olly@survex.com>

	* getopt/getopt.cc: Fixed to compile when not using glibc.

Wed Nov 03 14:55:29 GMT 2004  Olly Betts <olly@survex.com>

	* bin/omtcpsrv.cc,bin/quartzdump.cc,common/Makefile.am,common/getopt.h,
	  common/gnu_getopt.h,getopt/,testsuite/testsuite.cc: Major overhaul
	  of getopt use.  Move from getopt(), getopt_long(), getopt_long_only()
	  to gnu_getopt(), etc so we don't need to dance around avoiding
	  clashes with getopt() stuff in system headers.  The new gnu_getopt.h
	  header is cruft free and hopefully won't trip up assorted compilers
	  or platforms.

Wed Nov 03 14:53:39 GMT 2004  Olly Betts <olly@survex.com>

	* tests/Makefile.am: quartztest doesn't use getopt directly, so no
	  need to link it.

Wed Nov 03 12:56:56 GMT 2004  Olly Betts <olly@survex.com>

	* tests/stemtest.cc: Prune unused #includes.

Wed Nov 03 03:47:46 GMT 2004  Olly Betts <olly@survex.com>

	* getopt/getopt.cc: Defining _NO_PROTO is a really bad idea for C++
	  code!
