@@ -309,8 +309,7 @@ SocketServer::run_match(const string &firstmessage)
 
     MultiMatch match(db, query, omrset, collapse_key, percent_cutoff,
 		     weight_cutoff, sort_forward, Xapian::valueno(-1),
-		     false, 0, 0, 0, NULL,
-		     AutoPtr<StatsGatherer>(gatherer), wt.get());
+		     false, 0, 0, 0, NULL, gatherer, wt.get());
 
 #if 0
     DEBUGLINE(UNKNOWN, "Adding artificial delay for statistics");
